[features/twitter-sso][ADD] get likes and doc, doing tests.
