# apps/api/src/entities/data/data.routes.ts
@@ -7,4 +7,6 @@ const router = Router();
 router.get('/homePage', verifyToken, DataController.getHomePage);
 // router.get('/likes', DataController.getLikedPlaylists);
 router.get('/stats', DataController.getStats);
+
+router.get('/twitter/liked', verifyToken, DataController.getLikedTweets);
 export default router;
